argocd/prd/streetcrocket-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tst-streetcroquet-app
  namespace: tst-streetcroquet
  labels:
    app: tst-streetcroquet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tst-streetcroquet-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tst-streetcroquet-app
    spec:
      containers:
        - name: aks-streetcroquet
          image: tgclzdevacr.azurecr.io/streetcroquetdk:latest
          ports:
            - containerPort: 80
              protocol: TCP
