argocd/prd/streetcrocket-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tst-streetcroquet-ingress
  namespace: tst-streetcroquet
  annotations:
    cert-manager.io/issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tst.streetcrocket.com
      secretName: tst-streetcrocket-tls
  rules:
    - host: tst.streetcrocket.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tst-streetcroquet-svc
                port:
                  number: 80
